Simplify stream to collection.